styles.css
*{
    margin: 0;
    padding: 0;
    font-family: 'DM Sans', sans-serif;
}

body {
    background-color: #151315;
    margin-top: 1rem;
}

.navbar nav li {
    cursor: pointer;
}

.navbar{
    width: 1237px;
    margin: 0 auto;
}

.navbar-menu{
    display: flex;
    justify-content: space-between;
    align-items: center;
    list-style: none;
}

.navbar-item{
    height: 30px;
    color: #D0CAD0;
}

.fas.fa-bars {
    width: 1rem;
    height: 12px;
    color: #9D979D; 
}

.feature-section{
    width: 1241px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.feature-title, 
.feature-description{
    color:white;
    font-weight: 400;
}

.feature-title{
    font-size: 60px;
    line-height: 72px;
}

.feature-description{
    font-size: 20px;
    line-height: 30px;
}

.play-button {
    width: 218px; 
    height: 48px; 
    margin-top: 15px; 
    font-weight: 500; 
    font-size: 18px; 
    line-height: 20px; 
    padding: 16px 32px; 
    border: none; 
    background-color: #FEEA36; 
    color: black; 
    cursor: pointer; 
    border-radius: 30px; 
}

.underlined{
    position: relative;
}

.underlined::after {
    content: "";
    position: absolute; 
    bottom: 0;
    left: 0;
    width: 100%;
    height: 4px;
    background-color: white;
  }

  .image-section{
    display: flex;
    align-items: center;
  }

  .image-section img{
    width: 1324px;
    margin: 0 auto;
  }

